# ChangeLog for kde-misc/ksystemlog
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/ksystemlog/ChangeLog,v 1.8 2009/10/13 18:33:01 ssuominen Exp $

  13 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  ksystemlog-0.3.2-r1.ebuild, +files/ksystemlog-0.3.2-desktop-entry.patch:
  Fix Categories field for Desktop Entry wrt #275719.

*ksystemlog-0.3.2-r1 (13 Oct 2009)

  13 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
  ksystemlog-0.3.2.ebuild, +ksystemlog-0.3.2-r1.ebuild:
  Change SLOT to 3.5 wrt #259809.

  12 Oct 2009; Jonathan Callen <abcd@gentoo.org> ksystemlog-0.3.1.ebuild,
  ksystemlog-0.3.2.ebuild:
  QA fix: copyright date

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  28 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-ksystemlog-0.3.1, Manifest:
  Fixing SHA256 digest, pass four

*ksystemlog-0.3.2 (10 Apr 2006)

  10 Apr 2006; Marcus D. Hanwell <cryos@gentoo.org>
  +ksystemlog-0.3.2.ebuild:
  Version bump.

  26 Jul 2005; David Holm <dholm@gentoo.org> ksystemlog-0.3.1.ebuild:
  Added to ~ppc.

*ksystemlog-0.3.1 (26 Jul 2005)

  26 Jul 2005; Christian Parpart <trapni@gentoo.org> +metadata.xml,
  +ksystemlog-0.3.1.ebuild:
  Initial import; ebuild provided by Nicolas Ternisien
