@@ -1,5 +1,5 @@
 AUX ksystemlog-0.3.2-desktop-entry.patch 613 RMD160 5b036fea5047bb0badb88eb0fc180d58c172022b SHA1 3aedb20a8b808565a709a61cbd5a957ca52a5da1 SHA256 f5dd8912604bc4954208a476fa9ff215da97eecef549b53ffefc08e80c06df23
 DIST ksystemlog-0.3.2.tar.bz2 742783 RMD160 b688d2efc8e46b60f92af3245360c4910157556b SHA1 623123b67ea411daf88214307bc8e76866fb7645 SHA256 52f09dab484f974830ae0e89f019beae6b0ba336fc5b7ab8ed20f7bb93c9df00
-EBUILD ksystemlog-0.3.2-r1.ebuild 554 RMD160 56eb0fbabf4a735c54038d0cc9666dca7932c225 SHA1 d8ca07a5b11f2a8e4944ef77171f1be9f609b30e SHA256 0016a6085bec3c979c49333b866658e48cbdf2aa03e0b15c440d874997cb3679
-MISC ChangeLog 1328 RMD160 ec9c397296128c19f25cf5698bc84974126a7ea2 SHA1 697fae77c25cba40d1794087b65272ee0bf0c886 SHA256 ad12f25b2b2d4afb3bc94fc6008e414f58bc70cbff2e4f445ec8a325ec03872a
+EBUILD ksystemlog-0.3.2-r1.ebuild 542 RMD160 63749d96068bdf219eb2b1cac71b3c44cb5ddfba SHA1 ab5ae80f90c57eb89e0d2ea6f2243d1e42640888 SHA256 22e2c98ef020f27f872d938bf9f5c4d1ccbba7f09b5afe98cfd07efd1914c980
+MISC ChangeLog 1435 RMD160 59fd6aa7dcfb56d1514527437ca14a5a7fe7153b SHA1 6aeee6aa5e6cebea225940fc10751e8c8817ed2f SHA256 dc10e3122119d842b49385bba20a18849f378806c92c995a1496a1cbeb3de5c5
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
