@@ -6,6 +6,6 @@ DIST tork-0.27.tar.bz2 2667940 RMD160 750ec8dbde3da8df559285384ec93cca24d6c91c S
 DIST tork-0.31.tar.bz2 3043835 RMD160 79aa013ec9dce9e5725049260daf1c9652ee7929 SHA1 09e05ee4d471bad238c166c0d5f8a9770a997516 SHA256 05e633a2340594b2fe53fb838adff5a683322250d3da15cee430b0ad32d29fba
 EBUILD tork-0.23.ebuild 1214 RMD160 2e1d100330b4c555c05f6a1f2b62010a30c2cf50 SHA1 3f41b6f1e3a468f6aea5eb8413f68df7308e6f7b SHA256 fb2bb869482c37f4f7966d9438635dd2cff0e1d3cc5ab092e9455a4a8a726550
 EBUILD tork-0.27.ebuild 1469 RMD160 6b8e7a12d9dd71a5574ade0646df6483f32ea12a SHA1 6d4b51ce85c8c96ef99ced63b12c50561b193457 SHA256 4bc62df51b841e5323a5764d0eb6cc21103f8766c62ad4f97ac50c1d790f1c76
-EBUILD tork-0.31.ebuild 1504 RMD160 1ac387047a94671381cd95929b4bea641d26840e SHA1 5876e9b5dc9f485ff18ed953c0f39781fb6d63cb SHA256 5799ebd01c9360ccaa277591d8492ee7ebbcbf46e21c76fe1b07910f41bf5e25
-MISC ChangeLog 5798 RMD160 6ad84aa70c7a5eb71b5d649a7d496aa98cd261e6 SHA1 e582fee84e8b54719491148a339fe31ca128f697 SHA256 4f7c2e57dd28fa179c15c7ca86754062c6f12be4144bdb1656b6dea2861ca910
+EBUILD tork-0.31.ebuild 1485 RMD160 b271a640282a032ea390d57c65a6fb2386c67117 SHA1 8025b631c224fc9daf711f1eb186a0d6835cd202 SHA256 078daf8266d8222442f62251fbfb9bd82861d7fd333372a6434f968c4dd7b0fb
+MISC ChangeLog 5893 RMD160 215471c952da3f6b7ec841f9c38839768e0978b4 SHA1 fbbd94b1d4402d599f61ed7c9e39bc2a783bfe0e SHA256 209c0988bd64efc758b5be36227ae1892eb789764b6f28d3c9b9fb60640ab32b
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
