@@ -1,5 +1,5 @@
 AUX kstreamripper-0.3.4-desktop-entry.patch 1531 RMD160 4f1e8e5c1928392d94c1a1cc54e211d9430f535b SHA1 c2dc2a00f77f0be6809e072617bad7c734c555c1 SHA256 665d01f80f705e009aae94c8769d20686d3822a3ee9cd521e36a6ff416d2255a
 DIST kstreamripper-0.3.4.tar.bz2 126307 RMD160 72b8559ac13e3cb98e66637232ecf733ad1fd658 SHA1 64260d1b229bad0eb195bb0faee589c5f6420518 SHA256 924b1ced837ac6e5078e0bf9a5a88e0ca853ce2a200b47900a7ba63ef831c824
-EBUILD kstreamripper-0.3.4.ebuild 1292 RMD160 de59b653c89a2f7781433dda0bcc07c4004397db SHA1 3c0fe0cb3c2e46824555ff6fefd3cda4702d6233 SHA256 9d38d1b330f6a5686dedf24707b80e936c30441be56356a52b81656de401f0af
-MISC ChangeLog 2548 RMD160 4e14e6e1010e373d1d34e130385e16d0c4da7678 SHA1 a603a48c822c9c32c75cc8ab1eab67a07cdd836c SHA256 5f2f436f10b74439974c01a43ea1a931309be707c8120eab045557cab07dd555
+EBUILD kstreamripper-0.3.4.ebuild 1314 RMD160 147e9884f0c501c8ddffeb135f8fd9f8380e7fff SHA1 3e950afd1413b11fc035cf8f89e8b45176b56a15 SHA256 1f93d69620572938d12917a9016375ff6bc356ee3a725fbea3b993c043e274d9
+MISC ChangeLog 2656 RMD160 2bb9d89a0e88746b4b57e59c6ab535a892244f66 SHA1 1a033cfa0b8bab9b3987c069175fbe18d778112a SHA256 3132ecf4360ff923e8fc392d323a7e2e88460493f38b905608de8402fd48d4f7
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
