@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-sound/kstreamripper/ChangeLog,v 1.19 2009/05/29 14:54:40 ssuominen Exp $
 
+  25 May 2010; Ladislav Láska <ladislav.laska@gmail.com>
+  kstreamripper-0.3.4.ebuild:
+  Updated SRC_URI.
+
   29 May 2009; Samuli Suominen <ssuominen@gentoo.org>
   kstreamripper-0.3.4.ebuild, files/kstreamripper-0.3.4-desktop-entry.patch:
   Remove USE arts and move desktop entry to XDG path.
