@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/kde-misc/ksystemlog/ChangeLog,v 1.8 2009/10/13 18:33:01 ssuominen Exp $
 
+  25 May 2010; Ladislav Láska <ladislav.laska@gmail.com>
+  ksystemlog-0.3.2-r1.ebuild:
+  Updated SRC_URI
+
   13 Oct 2009; Samuli Suominen <ssuominen@gentoo.org>
   ksystemlog-0.3.2-r1.ebuild, +files/ksystemlog-0.3.2-desktop-entry.patch:
   Fix Categories field for Desktop Entry wrt #275719.
